--- a/settings/markdowTim.css
+++ b/settings/markdowTim.css
@@ -26,6 +26,7 @@ h1, h2, h3, h4, h5, h6 {
 	margin-top: 24px;
 	margin-bottom: 16px;
 	line-height: 1.25;
+	background-color: aqua;
 }
 
 #code-csp-warning {
